adding pagination and filtration by username and title